--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,2 @@
 FRONTEND_URL = http://localhost:3000
-MONGODB_URI = 
+MONGODB_URI = mongodb+srv://<serik>:<serik17>@chat-app.darxpcb.mongodb.net/?retryWrites=true&w=majority&appName=chat-app
