--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,3 @@
 FRONTEND_URL = http://localhost:3000
-MONGODB_URI = mongodb+srv://<serik>:<serik17>@chat-app.darxpcb.mongodb.net/?retryWrites=true&w=majority&appName=chat-app
+MONGODB_URI = mongodb+srv://serik:serik12345@chat-app.darxpcb.mongodb.net/?retryWrites=true&w=majority&appName=chat-app
+JWT_SECRET_KEY = SECRETKEYFORCHATAPPQWERTY
